external-crates/move/crates/move-compiler/tests/move_2024/parser/cast_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:4:9
  │
4 │         if (cond) x else { x } as u32;
  │         ^^^^^^^^^^^^^^^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:5:9
  │
5 │         while (cond) {} as u32;
  │         ^^^^^^^^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E04003]: built-in operation not supported
  ┌─ tests/move_2024/parser/cast_invalid.move:5:9
  │
5 │         while (cond) {} as u32;
  │         ^^^^^^^^^^^^^^^
  │         │
  │         Invalid argument to 'as'
  │         Found: '()'. But expected: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256'

error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:6:9
  │
6 │         loop {} as u32;
  │         ^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:7:9
  │
7 │         'l: { 0 } as u32;
  │         ^^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E04031]: invalid usage of lambda
  ┌─ tests/move_2024/parser/cast_invalid.move:8:9
  │
8 │         || { 0 } as u32;
  │         ^^^^^^^^^^^^^^^ Lambdas can only be used directly as arguments to 'macro' functions

error[E01015]: ambiguous 'as'
  ┌─ tests/move_2024/parser/cast_invalid.move:9:9
  │
9 │         return as u32;
  │         ^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:11:13
   │
11 │             break as u32;
   │             ^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:12:13
   │
12 │             continue as u32;
   │             ^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate

error[E01015]: ambiguous 'as'
   ┌─ tests/move_2024/parser/cast_invalid.move:14:9
   │
14 │         0 as u32 as u32;
   │         ^^^^^^^^ Potentially ambiguous 'as'. Add parentheses to disambiguate
